--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "firebase": "^10.13.1",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
